# ptvg

./: README.md  ptvgmain.py  pyproject.toml  startserver.sh  telly.py  updatedb.py
ptvg/: __init__.py  config.py  credential.py  db.py  routes.py  schedule.py  sdapi.py  web.py
ptvg/templates/: base.html  index.html
tests/: test_credential.py  test_logging.py  test_ptvg.py  test_sdapi.py
