[tool.poetry]
name = "ptvg"
version = "0.1.11"
description = "personal television guide based on schedules direct data."
authors = ["ccdale <chris.allison@hivehome.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
keyring = "^23.0.1"
PyYAML = "^5.4.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ptvgupdate = "updatedb:update"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
